objects/ScCollection_Targer_Arrears_Index__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>to capture each months target arrears index</description>
    <fields>
        <fullName>ScCollection_April_Target_Arrears_Index__c</fullName>
        <label>April Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_August_Arrears_Index__c</fullName>
        <label>August Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Dec_Arrears_Index__c</fullName>
        <label>Dec Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Feb_Arrears_Index__c</fullName>
        <label>Feb Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Jan_Target__c</fullName>
        <label>Jan Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_July_Arrears_Index__c</fullName>
        <label>July Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_June_Arrears_Index_Target__c</fullName>
        <label>June Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_March_Target_Arrears_Index__c</fullName>
        <label>March Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_May_Target_Arrears_Index__c</fullName>
        <label>May Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Nov_Arrears_Index__c</fullName>
        <label>Nov Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Oct_Arrears_Index__c</fullName>
        <label>Oct Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScCollection_Sep_Arrears_Index__c</fullName>
        <label>Sep Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Target Arrears Index</label>
</CustomObject>